Changes with APR 0.9.7

  *) Fix detection of rwlocks on Mac OS X. [Aaron Bannert]

  *) Fix issue with poll() followed by net I/O yielding EAGAIN on
     Mac OS 10.4 (Darwin 8). [Wilfredo Sanchez]

Changes with APR 0.9.6

  *) Add apr_threadattr_stacksize_set() for overriding the default
     stack size for threads created by apr_thread_create().
     [Jeff Trawick]

  *) Add an RPM spec file. [Graham Leggett]

  *) Add a build script to create a solaris package. [Graham Leggett]

Changes with APR 0.9.5

  *) Prevent unbounded memory use during repeated operations on a hash table.
     [Julian Foad <julianfoad btopenworld.com>

  *) fix apr_file_dup and apr_file_dup2 win32 implementations
     to create a mutex [Steve Hay <steve.hay uk.radan.com>]

  *) Makes the threads to behave like on posix. If the thread is created
     without APR_DETACH expect that the thread_join will be called, so don't
     close the handle in advance, if the thread has already finished.
     [Mladen Turk]
 
   *) The apr/test/Makefile.win is missing a target to build a
     readchild.exe that test is depending on but is never built.
     [Mladen Turk]
 
  *) Fix build issues in paths containing symlinks.  PR 8867.
     [Joe Orton]

  *) Update config.{guess,sub} for DragonFly BSD.  PR 29858.
     [Joe Orton]

  *) Win32: Fix bug in apr_socket_sendfile that interferred with
     Win32 LSPs. Bug is described in Apache 2.0 bugzilla report 
     23982 [Jan Bilek, Bill Stoddard]

  *) apr_proc_create() on Unix: Remove unnecessary check for read 
     access to the working directory of the child process.
     PR 30137.  [Jeremy Chadwick <apache jdc.parodius.com>]

  *) Win32: Fix bug tracking the file pointer on a file opened for 
     overlapped/APR_XTHREAD io. [Bill Stoddard]

  *) Fix FreeBSD atomics.  [Paul Querna <chip force-elite.com>]

  *) Fix apr_snprintf() to respect precision for small floating point
     numbers.  PR 29621.  [Artur Zaprzala <zybi talex.pl>]
